--- a/apps/manager-v2/src/app/manage-accounts/account-details/configuration/configuration.component.html
+++ b/apps/manager-v2/src/app/manage-accounts/account-details/configuration/configuration.component.html
@@ -16,6 +16,10 @@
       <pa-option value="stash-startup">Startup</pa-option>
       <pa-option value="stash-starter">Starter</pa-option>
       <pa-option value="stash-growth">Growth</pa-option>
+      <pa-option value="v3starter">Starter v3</pa-option>
+      <pa-option value="v3fly">Fly v3</pa-option>
+      <pa-option value="v3growth">Growth v3</pa-option>
+      <pa-option value="v3enterprise">Enterprise v3</pa-option>
     </pa-select>
 
     <pa-button
