--- a/apps/dashboard/src/app/account/billing/review/review.component.html
+++ b/apps/dashboard/src/app/account/billing/review/review.component.html
@@ -47,6 +47,9 @@
       <div>{{ token.card.brand }}</div>
       <div>**** **** **** {{ token.card.last4 }}</div>
     </div>
+    @if (customer?.billing_details.country === 'ES') {
+      <div class="body-m">{{ 'billing.without_vat' | translate }}</div>
+    }
   </pa-modal-content>
   <pa-modal-footer>
     <div class="button-container">
