Modify billing side menu

--- a/apps/dashboard/src/app/account/billing/billing.component.html
+++ b/apps/dashboard/src/app/account/billing/billing.component.html
@@ -1,48 +1,3 @@
-<div class="billing">
-  <div class="sidebar">
-    <h1>{{ 'account.billing' | translate }}</h1>
-    <ul class="menu">
-      <li>
-        <a
-          [routerLink]="'./subscriptions'"
-          routerLinkActive="active">
-          {{ 'billing.subscription.title' | translate }}
-        </a>
-      </li>
-      <li>
-        <a
-          [routerLink]="(isCheckoutActive | async) || (isSubscribed | async) ? './checkout' : undefined"
-          class="link"
-          routerLinkActive="active"
-          queryParamsHandling="preserve">
-          {{ 'billing.payment_details' | translate }}
-        </a>
-      </li>
-      <li *ngIf="isSubscribed | async">
-        <a
-          [routerLink]="'./my-subscription'"
-          routerLinkActive="active">
-          {{ 'billing.my-subscription' | translate }}
-        </a>
-      </li>
-      <li *ngIf="isSubscribed | async">
-        <a
-          [routerLink]="'./usage'"
-          routerLinkActive="active">
-          {{ 'billing.usage.consumption' | translate }}
-        </a>
-      </li>
-      <li *ngIf="isSubscribed | async">
-        <a
-          [routerLink]="'./history'"
-          routerLinkActive="active">
-          {{ 'billing.history.link' | translate }}
-        </a>
-      </li>
-    </ul>
-    <div></div>
-  </div>
-  <div class="main-content">
-    <router-outlet></router-outlet>
-  </div>
+<div class="billing page-spacing">
+  <router-outlet></router-outlet>
 </div>
