--- a/libs/common/src/lib/navbar/navbar.component.html
+++ b/libs/common/src/lib/navbar/navbar.component.html
@@ -232,14 +232,53 @@
           *ngIf="isBillingEnabled | async"
           class="group-items">
           <a
-            [routerLink]="(accountUrl | async) + '/billing'"
+            [routerLink]="(accountUrl | async) + '/billing/subscriptions'"
             routerLinkActive="active"
             data-cy="go-to-billing"
-            class="nav-link">
+            class="nav-link"
+            [class.sub-item]="inBilling | async">
             <pa-icon name="payment"></pa-icon>
-            <span class="nav-link-title">{{ 'sidenav.billing' | translate }}</span>
+            <span class="nav-link-title">{{ 'sidenav.subscription' | translate }}</span>
           </a>
         </div>
+        @if ((isSubscribed | async) && (inBilling | async)) {
+          <div class="nav-group">
+            <div class="group-items">
+              <a
+                [routerLink]="(accountUrl | async) + '/billing/checkout'"
+                routerLinkActive="active"
+                data-cy="go-to-checkout"
+                class="nav-link sub-item">
+                <pa-icon name="payment-details"></pa-icon>
+                <span class="nav-link-title">{{ 'billing.payment_details' | translate }}</span>
+              </a>
+              <a
+                [routerLink]="(accountUrl | async) + '/billing/my-subscription'"
+                routerLinkActive="active"
+                data-cy="go-to-my-subscription"
+                class="nav-link sub-item">
+                <pa-icon name="info"></pa-icon>
+                <span class="nav-link-title">{{ 'billing.my-subscription' | translate }}</span>
+              </a>
+              <a
+                [routerLink]="(accountUrl | async) + '/billing/usage'"
+                routerLinkActive="active"
+                data-cy="go-to-usage"
+                class="nav-link sub-item">
+                <pa-icon name="chart"></pa-icon>
+                <span class="nav-link-title">{{ 'billing.usage.consumption' | translate }}</span>
+              </a>
+              <a
+                [routerLink]="(accountUrl | async) + '/billing/history'"
+                routerLinkActive="active"
+                data-cy="go-to-history"
+                class="nav-link sub-item">
+                <pa-icon name="history"></pa-icon>
+                <span class="nav-link-title">{{ 'billing.history.link' | translate }}</span>
+              </a>
+            </div>
+          </div>
+        }
         <div
           *ngIf="isSyncEnabled | async"
           class="group-items">
