Fix build and pricing for ai-token-used

--- a/apps/dashboard/src/app/account/billing/checkout/checkout.component.html
+++ b/apps/dashboard/src/app/account/billing/checkout/checkout.component.html
@@ -23,9 +23,9 @@
         @if (currency$ | async; as currency) {
           @if ((prices$ | async)?.[account]?.recurring; as prices) {
             @if (monthly | async) {
-              {{ prices.month.price | currency: currency }}/{{ 'billing.month' | translate }}
+              {{ prices.month?.price | currency: currency }}/{{ 'billing.month' | translate }}
             } @else {
-              {{ prices.year.price | currency: currency }}/{{ 'billing.year' | translate }}
+              {{ prices.year?.price | currency: currency }}/{{ 'billing.year' | translate }}
             }
           }
         }
