[sc-8160] Fix model information in KB home

--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.html
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.html
@@ -122,7 +122,7 @@
           </div>
           @if ((configuration | async)?.['generative_model']; as model) {
             <div>
-              <div class="title-xxs">{{ 'dashboard-home.kb-details.language-model' | translate }}</div>
+              <div class="title-xxs">{{ 'dashboard-home.kb-details.generative-model' | translate }}</div>
               <div class="body-s">
                 {{ 'stash.config.option.' + model | translate }}
               </div>
