--- a/libs/common/src/lib/knowledge-box-settings/knowledge-box-settings.component.html
+++ b/libs/common/src/lib/knowledge-box-settings/knowledge-box-settings.component.html
@@ -1,193 +1,197 @@
-<div
-  class="knowledge-box-settings page-spacing"
-  *ngIf="kb && account">
-  <div class="section">
-    <h1>{{ 'stash.profile' | translate }}</h1>
+@if (kb) {
+  <div class="knowledge-box-settings page-spacing">
+    <div class="section">
+      <h1>{{ 'stash.profile' | translate }}</h1>
 
-    <form
-      *ngIf="kbForm"
-      [formGroup]="kbForm"
-      (ngSubmit)="saveKb()">
-      <pa-input
-        formControlName="uid"
-        readonly>
-        {{ 'generic.uid' | translate }}
-      </pa-input>
+      @if (kbForm) {
+        <form
+          [formGroup]="kbForm"
+          (ngSubmit)="saveKb()">
+          <pa-input
+            formControlName="uid"
+            readonly>
+            {{ 'generic.uid' | translate }}
+          </pa-input>
 
-      <pa-input
-        formControlName="slug"
-        [errorMessages]="validationMessages['slug']">
-        {{ 'generic.slug' | translate }}
-      </pa-input>
+          <pa-input
+            formControlName="slug"
+            [errorMessages]="validationMessages['slug']">
+            {{ 'generic.slug' | translate }}
+          </pa-input>
 
-      <pa-input
-        formControlName="title"
-        [errorMessages]="validationMessages['title']">
-        {{ 'generic.name' | translate }}
-      </pa-input>
+          <pa-input
+            formControlName="title"
+            [errorMessages]="validationMessages['title']">
+            {{ 'generic.name' | translate }}
+          </pa-input>
 
-      <pa-textarea
-        formControlName="description"
-        [rows]="4">
-        {{ 'generic.description' | translate }}
-      </pa-textarea>
+          <pa-textarea
+            formControlName="description"
+            [rows]="4">
+            {{ 'generic.description' | translate }}
+          </pa-textarea>
 
-      <div class="kb-status">
-        <h3 class="title-m">{{ 'stash.settings.status.label' | translate }}</h3>
-        @if (kb?.state?.toLowerCase(); as state) {
-          <div class="body-m">
-            <span [innerHTML]="'stash.settings.status.' + state | translate"></span>
-          </div>
-          <pa-button (click)="toggleKbState()">
-            {{ (state === 'published' ? 'account.stash.retire' : 'account.stash.publish') | translate }}
-          </pa-button>
-        }
-      </div>
-
-      <div
-        formGroupName="config"
-        class="config"
-        *ngFor="let conf of displayedLearningConfigurations">
-        <div class="header">
-          <h3 class="title-m">{{ 'stash.create.' + conf.id + '.label' | translate }}</h3>
-          <div class="body-m">{{ 'stash.create.' + conf.id + '.help' | translate }}</div>
-        </div>
-        <div>
-          <pa-radio-group
-            [formControlName]="conf.id"
-            [name]="conf.id"
-            (valueChange)="conf.id === 'generative_model' ? updatePrompts($event) : undefined"
-            [class.two-columns]="(conf.data.options || []).length > 5">
-            <pa-radio
-              *ngFor="let option of conf.data.options"
-              [value]="option.value">
-              {{ option | learningOption: conf.id }}
-            </pa-radio>
-          </pa-radio-group>
-          <div
-            *ngIf="getVisibleFieldGroup(conf) as groupId"
-            formGroupName="user_keys">
-            <div
-              class="user-keys"
-              [formGroupName]="groupId">
-              <pa-toggle
-                labelOnRight
-                [value]="ownKey"
-                (valueChange)="toggleOwnKey()">
-                {{ 'stash.config.own_key' | translate }}
-              </pa-toggle>
-              <ng-container *ngIf="ownKey">
-                <div
-                  *ngIf="hasTranslation('stash.config.key.' + groupId)"
-                  class="title-m">
-                  {{ 'stash.config.key.' + groupId | translate }}:
-                </div>
-                <div>
-                  <ng-container *ngFor="let field of userKeys?.[groupId] || {} | keyvalue">
-                    <pa-input
-                      *ngIf="!field.value.textarea"
-                      [formControlName]="field.key">
-                      {{ field.value.title | translate }}
-                    </pa-input>
-                    <pa-textarea
-                      *ngIf="field.value.textarea"
-                      [formControlName]="field.key"
-                      [rows]="5">
-                      {{ field.value.title | translate }}
-                    </pa-textarea>
-                  </ng-container>
-                </div>
-              </ng-container>
+          @if (kb?.state?.toLowerCase(); as state) {
+            <div class="kb-status">
+              <h3 class="title-m">{{ 'stash.settings.status.label' | translate }}</h3>
+              <div class="body-m">
+                <span [innerHTML]="'stash.settings.status.' + state | translate"></span>
+              </div>
+              <pa-button (click)="toggleKbState()">
+                {{ (state === 'published' ? 'account.stash.retire' : 'account.stash.publish') | translate }}
+              </pa-button>
             </div>
-          </div>
-          <div
-            *ngIf="
-              (isUserPromptsEnabled | async) === true &&
-              conf.id === 'generative_model' &&
-              !!currentPromptConfig &&
-              currentPromptKey
-            ">
-            <div formGroupName="user_prompts">
-              <div
-                *ngFor="let key of promptKeys"
-                [formGroupName]="key">
-                <div *ngIf="key == currentPromptKey">
+          }
+
+          @for (conf of displayedLearningConfigurations; track conf.id) {
+            <div
+              formGroupName="config"
+              class="config">
+              <div class="header">
+                <h3 class="title-m">{{ 'stash.create.' + conf.id + '.label' | translate }}</h3>
+                <div class="body-m">{{ 'stash.create.' + conf.id + '.help' | translate }}</div>
+              </div>
+              <div>
+                <pa-radio-group
+                  [formControlName]="conf.id"
+                  [name]="conf.id"
+                  (valueChange)="conf.id === 'generative_model' ? updatePrompts($event) : undefined"
+                  [class.two-columns]="(conf.data.options || []).length > 5">
+                  <pa-radio
+                    *ngFor="let option of conf.data.options"
+                    [value]="option.value">
+                    {{ option | learningOption: conf.id }}
+                  </pa-radio>
+                </pa-radio-group>
+                <div
+                  *ngIf="getVisibleFieldGroup(conf) as groupId"
+                  formGroupName="user_keys">
                   <div
-                    *ngIf="!!promptConfigurations?.schemas?.[key]?.properties?.['prompt']"
-                    class="user-prompts">
-                    <div class="header">
-                      <h3 class="title-m">{{ 'stash.create.user_prompts.prompt' | translate }}</h3>
-                      <div class="body-m">{{ 'stash.create.user_prompts.prompt_help' | translate }}</div>
-                    </div>
-                    <pa-select
-                      formControlName="prompt_examples"
-                      [dim]="true"
-                      [label]="'stash.create.user_prompts.examples' | translate"
-                      (valueChange)="setPrompt('prompt', key, $event)">
-                      <pa-option
-                        *ngFor="
-                          let option of promptConfigurations?.schemas?.[key]?.properties?.['prompt']?.examples || []
-                        "
-                        [value]="option">
-                        {{ option }}
-                      </pa-option>
-                    </pa-select>
-                    <pa-textarea
-                      formControlName="prompt"
-                      [rows]="5"
-                      [help]="promptConfigurations?.schemas?.[key]?.properties?.['prompt']?.info || ''">
-                      {{ promptConfigurations?.schemas?.[key]?.properties?.['prompt']?.title }}
-                    </pa-textarea>
+                    class="user-keys"
+                    [formGroupName]="groupId">
+                    <pa-toggle
+                      labelOnRight
+                      [value]="ownKey"
+                      (valueChange)="toggleOwnKey()">
+                      {{ 'stash.config.own_key' | translate }}
+                    </pa-toggle>
+                    <ng-container *ngIf="ownKey">
+                      <div
+                        *ngIf="hasTranslation('stash.config.key.' + groupId)"
+                        class="title-m">
+                        {{ 'stash.config.key.' + groupId | translate }}:
+                      </div>
+                      <div>
+                        <ng-container *ngFor="let field of userKeys?.[groupId] || {} | keyvalue">
+                          <pa-input
+                            *ngIf="!field.value.textarea"
+                            [formControlName]="field.key">
+                            {{ field.value.title | translate }}
+                          </pa-input>
+                          <pa-textarea
+                            *ngIf="field.value.textarea"
+                            [formControlName]="field.key"
+                            [rows]="5">
+                            {{ field.value.title | translate }}
+                          </pa-textarea>
+                        </ng-container>
+                      </div>
+                    </ng-container>
                   </div>
-                  <div
-                    *ngIf="!!promptConfigurations?.schemas?.[key]?.properties?.['system']"
-                    class="user-prompts">
-                    <div class="header">
-                      <h3 class="title-m">{{ 'stash.create.user_prompts.system' | translate }}</h3>
-                      <div class="body-m">{{ 'stash.create.user_prompts.system_help' | translate }}</div>
+                </div>
+                <div
+                  *ngIf="
+                    (isUserPromptsEnabled | async) === true &&
+                    conf.id === 'generative_model' &&
+                    !!currentPromptConfig &&
+                    currentPromptKey
+                  ">
+                  <div formGroupName="user_prompts">
+                    <div
+                      *ngFor="let key of promptKeys"
+                      [formGroupName]="key">
+                      <div *ngIf="key == currentPromptKey">
+                        <div
+                          *ngIf="!!promptConfigurations?.schemas?.[key]?.properties?.['prompt']"
+                          class="user-prompts">
+                          <div class="header">
+                            <h3 class="title-m">{{ 'stash.create.user_prompts.prompt' | translate }}</h3>
+                            <div class="body-m">{{ 'stash.create.user_prompts.prompt_help' | translate }}</div>
+                          </div>
+                          <pa-select
+                            formControlName="prompt_examples"
+                            [dim]="true"
+                            [label]="'stash.create.user_prompts.examples' | translate"
+                            (valueChange)="setPrompt('prompt', key, $event)">
+                            <pa-option
+                              *ngFor="
+                                let option of promptConfigurations?.schemas?.[key]?.properties?.['prompt']?.examples ||
+                                  []
+                              "
+                              [value]="option">
+                              {{ option }}
+                            </pa-option>
+                          </pa-select>
+                          <pa-textarea
+                            formControlName="prompt"
+                            [rows]="5"
+                            [help]="promptConfigurations?.schemas?.[key]?.properties?.['prompt']?.info || ''">
+                            {{ promptConfigurations?.schemas?.[key]?.properties?.['prompt']?.title }}
+                          </pa-textarea>
+                        </div>
+                        <div
+                          *ngIf="!!promptConfigurations?.schemas?.[key]?.properties?.['system']"
+                          class="user-prompts">
+                          <div class="header">
+                            <h3 class="title-m">{{ 'stash.create.user_prompts.system' | translate }}</h3>
+                            <div class="body-m">{{ 'stash.create.user_prompts.system_help' | translate }}</div>
+                          </div>
+                          <pa-select
+                            formControlName="system_examples"
+                            [dim]="true"
+                            [label]="'stash.create.user_prompts.examples' | translate"
+                            (valueChange)="setPrompt('system', key, $event)">
+                            <pa-option
+                              *ngFor="
+                                let option of promptConfigurations?.schemas?.[key]?.properties?.['system']?.examples ||
+                                  []
+                              "
+                              [value]="option">
+                              {{ option }}
+                            </pa-option>
+                          </pa-select>
+                          <pa-textarea
+                            formControlName="system"
+                            [rows]="5"
+                            [help]="promptConfigurations?.schemas?.[key]?.properties?.['system']?.info || ''">
+                            {{ promptConfigurations?.schemas?.[key]?.properties?.['system']?.title }}
+                          </pa-textarea>
+                        </div>
+                      </div>
                     </div>
-                    <pa-select
-                      formControlName="system_examples"
-                      [dim]="true"
-                      [label]="'stash.create.user_prompts.examples' | translate"
-                      (valueChange)="setPrompt('system', key, $event)">
-                      <pa-option
-                        *ngFor="
-                          let option of promptConfigurations?.schemas?.[key]?.properties?.['system']?.examples || []
-                        "
-                        [value]="option">
-                        {{ option }}
-                      </pa-option>
-                    </pa-select>
-                    <pa-textarea
-                      formControlName="system"
-                      [rows]="5"
-                      [help]="promptConfigurations?.schemas?.[key]?.properties?.['system']?.info || ''">
-                      {{ promptConfigurations?.schemas?.[key]?.properties?.['system']?.title }}
-                    </pa-textarea>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
-        </div>
-      </div>
+          }
 
-      <footer>
-        <pa-button
-          type="submit"
-          kind="primary"
-          data-cy="save-kb-settings"
-          [disabled]="kbForm.invalid || kbForm.pristine || saving">
-          {{ 'generic.save' | translate }}
-        </pa-button>
-        <pa-button
-          *ngIf="!kbForm.pristine"
-          aspect="basic"
-          (click)="initKbForm()">
-          {{ 'generic.cancel' | translate }}
-        </pa-button>
-      </footer>
-    </form>
+          <footer>
+            <pa-button
+              type="submit"
+              kind="primary"
+              data-cy="save-kb-settings"
+              [disabled]="kbForm.invalid || kbForm.pristine || saving">
+              {{ 'generic.save' | translate }}
+            </pa-button>
+            <pa-button
+              aspect="basic"
+              [disabled]="kbForm.pristine"
+              (click)="initKbForm()">
+              {{ 'generic.cancel' | translate }}
+            </pa-button>
+          </footer>
+        </form>
+      }
+    </div>
   </div>
-</div>
+}
