--- a/apps/dashboard/src/app/account/billing/usage/usage-table.component.html
+++ b/apps/dashboard/src/app/account/billing/usage/usage-table.component.html
@@ -1,42 +1,61 @@
-<ng-container *ngIf="usageData | async as usage">
+@if (usageData | async; as usage) {
   <header>
     <div>
       <h2>{{ 'billing.usage.title' | translate }}</h2>
       <div>
-        {{
-          'billing.usage.interval'
-            | translate
-              : {
-                  from: usage.start_billing_date | date : 'YYYY-MM-dd',
-                  to: usage.end_billing_date | date : 'YYYY-MM-dd'
-                }
-        }}
+        <div>{{ 'billing.usage.description' | translate }}</div>
+        <em>{{ 'billing.usage.interval' | translate: { to: usage.end_billing_date | date: 'YYYY-MM-dd' } }}</em>
       </div>
     </div>
-
-    <div class="total title-l">
-      {{ total | async | currency : usage.currency }}
-    </div>
+    @if (isDeprecatedAccount | async) {
+      <div class="total title-l">
+        {{ total | async | currency: usage.currency }}
+      </div>
+    }
   </header>
 
-  <pa-table columns="300px auto auto auto auto">
-    <pa-table-header>
-      <pa-table-cell header>{{ 'billing.usage.consumables' | translate }}</pa-table-cell>
-      <pa-table-cell header>{{ 'billing.usage.tier_included' | translate }}</pa-table-cell>
-      <pa-table-cell header>{{ 'billing.usage.consumption' | translate }}</pa-table-cell>
-      <pa-table-cell header>{{ 'billing.usage.over_consume' | translate }}</pa-table-cell>
-      <pa-table-cell header>
-        <div class="cost">{{ 'billing.usage.over_cost' | translate }}</div>
-      </pa-table-cell>
-    </pa-table-header>
-    <pa-table-row *ngFor="let item of invoiceItems | async">
-      <pa-table-cell>{{ 'billing.parameter.' + item[0] | translate }}</pa-table-cell>
-      <pa-table-cell>{{ item[1].threshold | number }}</pa-table-cell>
-      <pa-table-cell>{{ item[1].current_usage | number }}</pa-table-cell>
-      <pa-table-cell>{{ item[1].over_usage | number }}</pa-table-cell>
-      <pa-table-cell>
-        <div class="cost">{{ item[1].over_cost | currency : usage.currency }}</div>
-      </pa-table-cell>
-    </pa-table-row>
-  </pa-table>
-</ng-container>
+  @if (isDeprecatedAccount | async) {
+    <pa-table columns="300px auto auto auto auto">
+      <pa-table-header>
+        <pa-table-cell header>{{ 'billing.usage.consumables' | translate }}</pa-table-cell>
+        <pa-table-cell header>{{ 'billing.usage.tier_included' | translate }}</pa-table-cell>
+        <pa-table-cell header>{{ 'billing.usage.consumption' | translate }}</pa-table-cell>
+        <pa-table-cell header>{{ 'billing.usage.over_consume' | translate }}</pa-table-cell>
+        <pa-table-cell header>
+          <div class="cost">{{ 'billing.usage.cost' | translate }}</div>
+        </pa-table-cell>
+      </pa-table-header>
+      @for (item of invoiceItems | async; track item) {
+        <pa-table-row>
+          <pa-table-cell>{{ 'billing.parameter.' + item[0] | translate }}</pa-table-cell>
+          <pa-table-cell>{{ item[1].threshold | number }}</pa-table-cell>
+          <pa-table-cell>{{ item[1].current_usage | number }}</pa-table-cell>
+          <pa-table-cell>{{ item[1].over_usage | number }}</pa-table-cell>
+          <pa-table-cell>
+            <div class="cost">{{ item[1].over_cost | currency: usage.currency }}</div>
+          </pa-table-cell>
+        </pa-table-row>
+      }
+    </pa-table>
+  } @else {
+    <pa-table columns="300px auto auto">
+      <pa-table-header>
+        <pa-table-cell header>{{ 'billing.usage.consumables' | translate }}</pa-table-cell>
+        <pa-table-cell header>{{ 'billing.usage.requests' | translate }}</pa-table-cell>
+        <pa-table-cell header>
+          <div class="cost">{{ 'billing.usage.cost' | translate }}</div>
+        </pa-table-cell>
+      </pa-table-header>
+      @if (usage.invoice_items['ai-tokens-used']; as aiTokens) {
+        <pa-table-row>
+          <pa-table-cell>{{ 'billing.parameter.ai-tokens-used' | translate }}*</pa-table-cell>
+          <pa-table-cell>{{ aiTokens.current_usage / tokensPerRequest | number: '1.0-0' }}</pa-table-cell>
+          <pa-table-cell>
+            <div class="cost">{{ aiTokens.over_cost | currency: usage.currency }}</div>
+          </pa-table-cell>
+        </pa-table-row>
+      }
+    </pa-table>
+    <div class="notes body-xs">* {{ 'billing.search-endpoints' | translate }}</div>
+  }
+}
