--- a/libs/common/src/lib/resources/edit-resource/annotation/paragraph-annotation/paragraph-annotation.component.scss
+++ b/libs/common/src/lib/resources/edit-resource/annotation/paragraph-annotation/paragraph-annotation.component.scss
@@ -59,6 +59,15 @@
     gap: rhythm(0.5);
   }
 
+  .ner-families-container {
+    max-height: calc(
+      100vh - var(--app-topbar-height) - #{$height-header} - var(--app-layout-padding-top) - #{$height-help-container}
+    );
+    position: sticky;
+    overflow: auto;
+    top: calc(#{$sticky-top} + #{$height-help-container});
+  }
+
   pa-expander ::ng-deep .pa-expander-header {
     padding-left: rhythm(1);
   }
