--- a/libs/common/src/lib/resources/edit-resource/classification/paragraph-classification/paragraph-classification.component.scss
+++ b/libs/common/src/lib/resources/edit-resource/classification/paragraph-classification/paragraph-classification.component.scss
@@ -49,6 +49,12 @@ $padding-bottom-header: rhythm(3);
   display: flex;
   flex-direction: column;
   gap: rhythm(3);
+  max-height: calc(
+    100vh - var(--app-topbar-height) - #{$height-header} - var(--app-layout-padding-top) - #{$height-help-container}
+  );
+  overflow: auto;
+  position: sticky;
+  top: calc(#{$sticky-top} + #{rhythm(6)});
 }
 
 .right-panel-container {
