--- a/libs/common/src/lib/resources/edit-resource/classification/resource-classification.component.scss
+++ b/libs/common/src/lib/resources/edit-resource/classification/resource-classification.component.scss
@@ -13,11 +13,10 @@
   display: flex;
   gap: rhythm(5);
 }
+
 .label-selector-container {
-  max-height: calc(
-    100vh - var(--app-topbar-height) - #{$height-header} - #{$padding-top-page-container} - #{$footer-height}
-  );
-  overflow: auto;
   padding-right: rhythm(2);
+  position: sticky;
+  top: calc(#{$sticky-top} + #{rhythm(6)});
   width: rhythm(32);
 }
