--- a/libs/common/src/lib/resources/edit-resource/edit-resource.component.html
+++ b/libs/common/src/lib/resources/edit-resource/edit-resource.component.html
@@ -1,39 +1,45 @@
 <div class="edit-resource">
   <header>
-    <div class="navigation-buttons">
-      <pa-button
-        icon="chevrons-left"
-        aspect="basic"
-        data-cy="back-to-resources"
-        [paTooltip]="'resource.tooltip.back-to-resources' | translate"
-        (click)="backToResources()">
-        {{ 'resource.tooltip.back-to-resources' | translate }}
-      </pa-button>
-      <pa-button
-        icon="chevron-left"
-        aspect="basic"
-        data-cy="previous-resource"
-        [disabled]="
-          (resourceNavigationService.hasData | async) === false || (resourceNavigationService.isFirstResource | async)
-        "
-        [paTooltip]="'resource.tooltip.previous-resource' | translate"
-        (click)="previousResource()">
-        {{ 'resource.tooltip.previous-resource' | translate }}
-      </pa-button>
-      <pa-button
-        icon="chevron-right"
-        aspect="basic"
-        data-cy="next-resource"
-        [disabled]="
-          (resourceNavigationService.hasData | async) === false || (resourceNavigationService.isLastResource | async)
-        "
-        [paTooltip]="'resource.tooltip.next-resource' | translate"
-        (click)="nextResource()">
-        {{ 'resource.tooltip.next-resource' | translate }}
-      </pa-button>
-    </div>
+    <div class="header-left-block">
+      <div class="navigation-buttons">
+        <pa-button
+          icon="chevrons-left"
+          aspect="basic"
+          data-cy="back-to-resources"
+          [paTooltip]="'resource.tooltip.back-to-resources' | translate"
+          (click)="backToResources()">
+          {{ 'resource.tooltip.back-to-resources' | translate }}
+        </pa-button>
+        <pa-button
+          icon="chevron-left"
+          aspect="basic"
+          data-cy="previous-resource"
+          [disabled]="
+            (resourceNavigationService.hasData | async) === false || (resourceNavigationService.isFirstResource | async)
+          "
+          [paTooltip]="'resource.tooltip.previous-resource' | translate"
+          (click)="previousResource()">
+          {{ 'resource.tooltip.previous-resource' | translate }}
+        </pa-button>
+        <pa-button
+          icon="chevron-right"
+          aspect="basic"
+          data-cy="next-resource"
+          [disabled]="
+            (resourceNavigationService.hasData | async) === false || (resourceNavigationService.isLastResource | async)
+          "
+          [paTooltip]="'resource.tooltip.next-resource' | translate"
+          (click)="nextResource()">
+          {{ 'resource.tooltip.next-resource' | translate }}
+        </pa-button>
+      </div>
 
-    <div class="title-s">{{ (resource | async)?.title }}</div>
+      <div
+        class="title-s"
+        paEllipsisTooltip>
+        {{ (resource | async)?.title }}
+      </div>
+    </div>
     <div class="actions">
       <pa-button
         icon="eye"
